tests/fixtures/invalid/undefined_model.pi
# Error: Model no declarado en task
project test

task analyze
   model undefined_model
   goal analyze data
